# ExceptionSafeCode

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
scripts/: apply_clang_format.sh
src/: .CopyableClasses.hpp.swp  Aggregator.cpp  Aggregator.hpp  CopyableClasses.cpp  CopyableClasses.hpp
test/: .MemoryLeakCheck.cpp.swp  MemoryLeakCheck.cpp
tools/: clang_format_check.sh  docker_image
tools/conan/: profile_clang_debug  profile_clang_release
